Textbook: Fix issues with widget block centre alignment.

--- a/textbook/assets/css/blocks.css
+++ b/textbook/assets/css/blocks.css
@@ -255,12 +255,13 @@ p.has-drop-cap:not(:focus)::first-letter {
 5.0 Blocks - Widgets
 --------------------------------------------------------------*/
 
-/* Categories, Latest Posts & Archives */
+/* General Widget styles */
 
 .wp-block-categories.aligncenter,
 .wp-block-categories.aligncenter ul,
+.wp-block-archives.aligncenter,
 .wp-block-latest-posts.aligncenter,
-.wp-block-archives.aligncenter {
+.wp-block-latest-comments.aligncenter {
 	list-style-position: inside;
 	margin-left: 0;
 	margin-right: 0;
